fix: Fixed scrollbar not good in dark

--- a/packages/web/src/app.css
+++ b/packages/web/src/app.css
@@ -20,4 +20,28 @@
 
 :root {
   font-family: 'DM Sans', 'custom-font', sans-serif;
+  --primary: #010404;
+  --secondary: #1a202c
+}
+
+/* Firefox */
+* {
+  scrollbar-width: thin;
+  scrollbar-color: var(--secondary) var(--primary);
+}
+
+/* Chrome, Edge, and Safari */
+*::-webkit-scrollbar {
+  width: 15px;
+}
+
+*::-webkit-scrollbar-track {
+  background: var(--primary);
+  border-radius: 5px;
+}
+
+*::-webkit-scrollbar-thumb {
+  background-color: var(--secondary);
+  border-radius: 14px;
+  border: 3px solid var(--primary);
 }
